<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ChatActivity">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/calendar" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/week_schedule_dr"
                android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@color/cardview_light_background"
                    android:gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"

                    android:text="@string/subramanyam"
                    android:textSize="17sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/cardview_light_background"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/days"
                    android:textColor="@color/primary_text"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/cardview_light_background"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/morning"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/cardview_light_background"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/afternoon"
                    android:textSize="17sp" />


            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/icons"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/primary_light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/monday"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/_0900_1200" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/_1400_1700" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/icons"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/primary_light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/tuesday"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/red_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/red_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/icons"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/primary_light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/wednesday"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="0900 - 1200" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="1400 - 1700" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/icons"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/primary_light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/thursday"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="0900 - 1200" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="1400 - 1700" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/icons"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/primary_light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/friday"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="0900 - 1200" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/yellow_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="1400 - 1700" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/icons"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/primary_light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/saturday"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/red_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@color/red_material"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnshape"
                android:fontFamily="sans-serif"
                android:text="@string/book_an_appointment"
                android:textColor="@color/icons"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text=""
                android:textSize="18sp" />


        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>